--- a/nfl.html
+++ b/nfl.html
@@ -138,14 +138,14 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nfl-streams-1">
-         New York Giants vs New England Patriots
+         Dallas Cowboys vs Detroit Lions
         </a>
        </td>
        <td>
-        December 01, 2025 5:15 PM
+        December 03, 2025 5:15 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="December 02, 2025 5:15 PM:00" data-start="December 01, 2025 5:15 PM:00">
+        <span class="countdown-timer" data-end="December 04, 2025 5:15 PM:00" data-start="December 03, 2025 5:15 PM:00">
         </span>
        </td>
       </tr>
