--- a/soccer.html
+++ b/soccer.html
@@ -97,20 +97,20 @@
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-1">Bologna vs Parma</a>
 <td>December 04, 2025 09:00 AM</td>
-<td><span class="countdown-timer" data-end="December 04, 2025 08:00:00" data-start="December 03, 2025 09:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 05, 2025 08:00:00" data-start="December 04, 2025 09:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-2">Lazio vs Milan</a>
 <td>December 04, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 04, 2025 08:00:00" data-start="December 03, 2025 09:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 05, 2025 11:00:00" data-start="December 04, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-3">Manchester United vs West Ham</a>
 <td>December 04, 2025 12:00 PM</td>
-<td><span class="countdown-timer" data-end="December 04, 2025 09:00:00" data-start="December 03, 2025 10:00:00"></span></td>
+<td><span class="countdown-timer" data-end="December 05, 2025 11:00:00" data-start="December 04, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Cruzeiro vs Botafogo</a>
 <td>December 04, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="December 04, 2025 10:30:00" data-start="December 03, 2025 11:30:00"></span></td>
-<tr></tbody></table>
+<td><span class="countdown-timer" data-end="December 05, 2025 13:30:00" data-start="December 04, 2025 14:30:00"></span></td>
+<tr></tr></td></tr></td></tr></td></tr></td></tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
