--- a/nba.html
+++ b/nba.html
@@ -235,6 +235,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 07, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Orlando Magic vs New York Knicks
+        </a>
+       </td>
+       <td>
+        December 07, 2025 9:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 9:00 AM:00" data-start="December 07, 2025 9:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Boston Celtics vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        December 07, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 12:30 PM:00" data-start="December 07, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Denver Nuggets vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        December 07, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 3:00 PM:00" data-start="December 07, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Portland Trail Blazers vs Memphis Grizzlies
+        </a>
+       </td>
+       <td>
+        December 07, 2025 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 3:00 PM:00" data-start="December 07, 2025 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Golden State Warriors vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        December 07, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 4:00 PM:00" data-start="December 07, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Los Angeles Lakers vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        December 07, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 4:30 PM:00" data-start="December 07, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Oklahoma City Thunder vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        December 07, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="December 08, 2025 5:00 PM:00" data-start="December 07, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
