--- a/soccer.html
+++ b/soccer.html
@@ -95,92 +95,92 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Aston Villa vs Arsenal</a>
-<td>December 06, 2025 04:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Elche vs Girona</a>
+<td>December 07, 2025 05:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Derby County vs Leicester City</a>
-<td>December 06, 2025 04:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Brighton vs West Ham</a>
+<td>December 07, 2025 06:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Norwich City</a>
-<td>December 06, 2025 04:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Nice vs Angers</a>
+<td>December 07, 2025 06:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 03:30:00" data-start="December 06, 2025 04:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Villarreal vs Getafe</a>
-<td>December 06, 2025 05:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Cagliari vs Roma</a>
+<td>December 07, 2025 06:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 04:00:00" data-start="December 06, 2025 05:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Stuttgart vs Bayern München</a>
-<td>December 06, 2025 06:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Hamburger SV vs Werder Bremen</a>
+<td>December 07, 2025 06:30 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 05:30:00" data-start="December 06, 2025 06:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Bournemouth vs Chelsea</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Celtic vs Hearts</a>
+<td>December 0607 2025 07:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Everton vs Nottingham</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Valencia vs Sevilla</a>
+<td>December 07, 2025 07:15 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Manchester City vs Sunderland</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Le Havre vs Paris</a>
+<td>December 07, 2025 08:15 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Newcastle United vs Burnley</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Dortmund vs Hoffenheim</a>
+<td>December 07, 2025 08:30 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Tottenham vs Brentford</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Fulham vs Crystal Palace</a>
+<td>December 07, 2025 08:30 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Bristol City vs Millwall</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Lazio vs Bologna</a>
+<td>December 07, 2025 09:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Ipswich Town vs Coventry City</a>
-<td>December 06, 2025 07:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Espanyol vs Rayo Vallecano</a>
+<td>December 07, 2025 09:30 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:00:00" data-start="December 06, 2025 07:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Deportivo Alavés vs Real Sociedad</a>
-<td>December 06, 2025 07:15 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Botafogo vs Fortaleza</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 06:15:00" data-start="December 06, 2025 07:15:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Nantes vs Lens</a>
-<td>December 06, 2025 08:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Corinthians vs Juventude</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 07:00:00" data-start="December 06, 2025 08:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Inter Milan vs Como</a>
-<td>December 06, 2025 09:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Ceará vs Palmeiras</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 08:00:00" data-start="December 06, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Leeds vs Liverpool</a>
-<td>December 06, 2025 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Fluminense vs Bahia</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Barcelona vs Real Betis</a>
-<td>December 06, 2025 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Vitória vs São Paulo</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">RB Leipzig vs Eintracht Frankfurt</a>
-<td>December 06, 2025 09:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Santos vs Cruzeiro</a>
+<td>December 07, 2025 11:00 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 08:30:00" data-start="December 06, 2025 09:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Toulouse vs Strasbourg</a>
-<td>December 06, 2025 10:00 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Napoli vs Juventus</a>
+<td>December 07, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 09:00:00" data-start="December 06, 2025 10:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Inter Miami vs Vanocuver Whitecaps</a>
-<td>December 06, 2025 11:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Lorient vs Lyon</a>
+<td>December 07, 2025 11:45 AM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 10:30:00" data-start="December 06, 2025 11:30:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Hellas Verona vs Atalanta</a>
-<td>December 06, 2025 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Real Madrid vs Celta Vigo</a>
+<td>December 07, 2025 12:00 PM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 10:45:00" data-start="December 06, 2025 11:45:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Athletic Club vs Atlético Madrid</a>
-<td>December 06, 2025 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Boca Juniors vs Racing Club</a>
+<td>December 07, 2025 14:00 PM</td>
 <td><span class="countdown-timer" data-end="December 07, 2025 11:00:00" data-start="December 06, 2025 12:00:00"></span></td>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-12">Kilmarnock vs Rangers</a>
