--- a/fighting.html
+++ b/fighting.html
@@ -102,6 +102,10 @@
 <td>December 12, 2025 17:00 PM</td>
 <td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 12, 2025 17:00:00"></span></td>
 </tr>
+<td><a href="https://roxiestreams.live/wwe-streams">UFC Fight Night: Royval vs Kape</a></td>
+<td>December 13, 2025 16:00 PM</td>
+<td><span class="countdown-timer" data-end="December 31, 2025 23:59:00" data-start="December 13, 2025 16:00:00"></span></td>
+</tr>
 </tbody>
 </table>
 </div>
